src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-montserrat);
  --font-serif: var(--font-cormorant);
  --font-mono: var(--font-great-vibes);
  --font-cormorant: var(--font-cormorant);
  --font-great-vibes: var(--font-great-vibes);
  --font-montserrat: var(--font-montserrat);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans);
}

